kubernetes/services/configs/kubia-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-headless
spec:
  clusterIP: None # no IP, then Service will match ALL Pods fulfilling label selector.
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
