kubernetes/services/configs/kubia-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec:
  type: LoadBalancer # LB from the Cloud provider infrastructure. K8 chooses the port automatically
  ports:
  - port: 80
    targetPort: 8080 # target port in the backing Pod
    # nodePort: can be set, but if not - will be set automatically
  selector:
    app: kubia
