kubernetes/services/configs/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  ports:
  - port: 80 # port of the service's internal cluster IP, on which service will be accessible
    targetPort: 8080 # target port in the backing Pod
    nodePort: 30123 # service will be accessible through port 30123 on each cluster node
  selector:
    app: kubia
