kubernetes/services/configs/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports:
  # [svc 'port'] -> [container 'target port']
  - name: http
    port: 80 # The port this service will be available on
    targetPort: 8080 # you could use 'http' name (but number is better), see @pod.yaml, the container port the service will forward to
  - name: https
    port: 443
    targetPort: 8443 # you could use 'https' name (but number is better), see @pod.yaml
  selector: # requests will be forwarded to Pods which have below labels:
    app: kubia
